<resources>
    <string name="app_name">Port Scanner Zero</string>
    <string name="host_field_hint">IP Address or Hostname</string>
    <string name="port_field_hint">Port Numbers</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="output_text">Results</string>
    <string name="port_text">1-1024</string>
    <string name="host_text">127.0.0.1</string>

    <string name="thread_count_preference_title">Maximum Number of Threads</string>
    <string name="thread_count_preference_summary">Enter the number of threads you want to run.</string>

    <string name="scan_type_text">Choose Scan Type</string>

    <string name="eula_text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="eula_agree_Text">I have read and I accept the EULA</string>
</resources>